--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h1>Hello World</h1>
+<h1>{{ name | titlecase }}</h1>
+<h1>{{ value | number }}</h1>
+<h1>{{ obj | json }}</h1>
+
+
+<button (click)="showName()">
+  Change Name
+</button>
