--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,18 @@
 <button pButton
   (click)="showName()"
   label="Change name"
+  icon="pi pi-bell"
+  iconPos="right"
+  class="p-button-help"
   >
 </button>
+
+<p-card 
+    [header]="name | titlecase" 
+    subheader="Simple Card"
+    [style]="{'width': '25rem', 'margin-bottom': '2em'}">
+  <ng-template pTemplate="header">
+  </ng-template>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+      quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+</p-card>
