--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,1 @@
-<div class="text-layout">
-  <h1>{{ name | titlecase }}</h1>
-  <h1>{{ value | number }}</h1>
-  <h1>{{ obj | json }}</h1>
-  
-  
-</div>
-<button pButton
-  (click)="showName()"
-  label="Change name"
-  icon="pi pi-bell"
-  iconPos="right"
-  class="p-button-help"
-  >
-</button>
-
-<p-card 
-    [header]="name | titlecase" 
-    subheader="Simple Card"
-    [style]="{'width': '25rem', 'margin-bottom': '2em'}">
-  <ng-template pTemplate="header">
-  </ng-template>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-      quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-</p-card>
+<app-menu></app-menu>
