--- a/src/app/sales/pages/basics/basics.component.html
+++ b/src/app/sales/pages/basics/basics.component.html
@@ -1,1 +1,23 @@
-<p>basics works!</p>
+<div class="text-layout">
+    <h1>Basic pipes</h1>
+    <p>
+        Pipes includes in Angular - Usually in Common Module
+    </p>
+</div>
+<div class="grid">
+    <div class="col-4">
+        <p-card header="uppercase">
+            
+        </p-card>
+    </div>
+    <div class="col-4">
+        <p-card>
+            2
+        </p-card>
+    </div>
+    <div class="col-4">
+        <p-card>
+            3
+        </p-card>
+    </div>
+</div>
