--- a/src/app/sales/pages/basics/basics.component.html
+++ b/src/app/sales/pages/basics/basics.component.html
@@ -1,23 +1,32 @@
 <div class="text-layout">
-    <h1>Basic pipes</h1>
+    <h1>Basic Pipes</h1>
     <p>
         Pipes includes in Angular - Usually in Common Module
     </p>
 </div>
 <div class="grid">
     <div class="col-4">
-        <p-card header="uppercase">
-            
+        <p-card 
+            header="uppercase"
+            [subheader]="nameLower | uppercase"
+        >
+         {{ nameLower | uppercase }}   
         </p-card>
     </div>
     <div class="col-4">
-        <p-card>
-            2
+        <p-card 
+            header="lowercase"
+            [subheader]="nameLower | lowercase"
+        >
+         {{ nameLower | lowercase }}   
         </p-card>
     </div>
     <div class="col-4">
-        <p-card>
-            3
+        <p-card 
+            header="titleCase"
+            [subheader]="nameLower | titlecase"
+        >
+         {{ nameLower | titlecase }}   
         </p-card>
     </div>
 </div>
