--- a/src/app/sales/pages/numbers/numbers.component.html
+++ b/src/app/sales/pages/numbers/numbers.component.html
@@ -1,1 +1,19 @@
-<p>numbers works!</p>
+<div class="text-layout">
+    <h1>Decimal Pipe and percentage</h1>
+    <p>
+        Pipes includes in Angular - Usually in Common Module
+    </p>
+</div>
+<div class="grid">
+    <div class="col-4">
+        <p-card 
+            header="Total Sales"
+            subheader="this year"
+        >
+        <i class="pi pi-dollar"></i>
+        {{ (totalSales + 10000) | number: '1.2-2' }}
+        </p-card>
+    </div>
+   
+</div>
+
