--- a/src/app/sales/pages/numbers/numbers.component.html
+++ b/src/app/sales/pages/numbers/numbers.component.html
@@ -7,11 +7,29 @@
 <div class="grid">
     <div class="col-4">
         <p-card 
-            header="Total Sales"
+            header="Net Sales"
             subheader="this year"
         >
         <i class="pi pi-dollar"></i>
-        {{ (totalSales + 10000) | number: '1.2-2' }}
+        {{ (netSales + 10000) | number: '1.2-2' }}
+        </p-card>
+    </div>
+
+    
+    <div class="col-4">
+        <p-card 
+            header="Gross Sales"
+            subheader="this year"
+        >
+            {{ (netSales + 20000) | currency:'CAD':'symbol-narrow':'1.4-4' }}
+        </p-card>
+    </div>
+    <div class="col-4">
+        <p-card 
+            header="Parcentage Gain"
+            subheader="this year"
+        >
+            {{ percentage | percent: '2.2-2'}}
         </p-card>
     </div>
    
