--- a/src/app/sales/pages/no-commons/no-commons.component.html
+++ b/src/app/sales/pages/no-commons/no-commons.component.html
@@ -1,1 +1,22 @@
-<p>no-commons works!</p>
+<div class="text-layout">
+    <h1>No commons Pipes</h1>
+    <p>
+        Pipes includes in Angular - Usually in Common Module
+    </p>
+</div>
+<div class="grid">
+    <div class="col col-md-6">
+        <p-fieldset 
+            [toggleable]="true"
+            legend="i18nSelect Pipe">
+            In tempor proident Lorem et laboris duis in exercitation. Aliquip proident magna ad magna voluptate. Nostrud enim id ex mollit id duis ullamco deserunt laborum pariatur dolor. Ea aliqua culpa irure ut voluptate magna proident. Minim consectetur id sunt amet veniam ipsum voluptate cillum aliqua excepteur nulla Lorem esse.
+        </p-fieldset>
+    </div>
+    <div class="col col-md-6">
+        <p-fieldset 
+            [toggleable]="true"
+            legend="i18nPlural Pipe">
+            In tempor proident Lorem et laboris duis in exercitation. Aliquip proident magna ad magna voluptate. Nostrud enim id ex mollit id duis ullamco deserunt laborum pariatur dolor. Ea aliqua culpa irure ut voluptate magna proident. Minim consectetur id sunt amet veniam ipsum voluptate cillum aliqua excepteur nulla Lorem esse.
+        </p-fieldset>
+    </div>
+</div>
