--- a/src/app/sales/pages/no-commons/no-commons.component.html
+++ b/src/app/sales/pages/no-commons/no-commons.component.html
@@ -23,7 +23,7 @@
         <p-fieldset 
             [toggleable]="true"
             legend="i18nPlural Pipe">
-            In tempor proident Lorem et laboris duis in exercitation. Aliquip proident magna ad magna voluptate. Nostrud enim id ex mollit id duis ullamco deserunt laborum pariatur dolor. Ea aliqua culpa irure ut voluptate magna proident. Minim consectetur id sunt amet veniam ipsum voluptate cillum aliqua excepteur nulla Lorem esse.
+            Actualmente {{ clientes.length | i18nPlural:clientsMap }}
         </p-fieldset>
     </div>
 </div>
