--- a/src/app/sales/pages/no-commons/no-commons.component.html
+++ b/src/app/sales/pages/no-commons/no-commons.component.html
@@ -55,4 +55,30 @@
             <pre>{{ clients | slice:1:2 }}</pre>
         </p-fieldset>
     </div>
+
+    <div class="col-6 col-md-6">
+        <p-fieldset
+            [toggleable]="true"
+            legend="KeyValue Pipe">
+            <ul>
+                <li *ngFor="let item of person | keyvalue">
+                    <b>{{ item.key | uppercase }}:</b> {{ item.value }}
+                </li>
+            </ul>
+        </p-fieldset>
+    </div>
+
+    <div class="col-6 col-md-6">
+        <p-fieldset
+            [toggleable]="true"
+            legend="Json Pipe">
+            <pre>
+                {{ heroes | json }}
+            </pre>
+        </p-fieldset>
+    </div>
+
+    
+
 </div>
+
