create custom uppercasepipe

--- a/src/app/sales/pages/sort/sort.component.html
+++ b/src/app/sales/pages/sort/sort.component.html
@@ -1,1 +1,11 @@
-<p>sort works!</p>
+<div class="text-layout">
+    <h1>Custom Pipes</h1>
+    <p>   
+        Pipes created by me
+    </p>
+</div>
+<div class="grid">
+    <div class="col col-md-6">
+        <p>{{ 'test'| uppercasepipe }}</p>
+    </div>
+</div>
