--- a/src/app/sales/pages/sort/sort.component.html
+++ b/src/app/sales/pages/sort/sort.component.html
@@ -13,10 +13,56 @@
                 {{ 'test'| uppercasepipe:inUpperCase }}
             </p>
             <p-button
-                    label="Change Person"
+                    label="Uppercase toogle"
                     (onClick)="toogle()"
             ></p-button>
         </p-fieldset>
+    </div>
+    <div class="col-12">
 
+        <p-toolbar>
+            <div class="p-toolbar-group-left">
+            </div>
+            
+            <div class="p-toolbar-group-right">
+                <p-button
+                    icon="pi pi-sort"
+                    label="by name"
+                    class="mr-1"
+                > </p-button>
+                <p-button
+                    icon="pi pi-sort"
+                    label="by value"
+                    class="mr-1 p-button-success"
+                > </p-button>
+                <p-button
+                    icon="pi pi-sort"
+                    label="by color"
+                    class="mr-1 p-button-help"
+                > </p-button>
+            </div>
+        </p-toolbar>
+    </div>
+</div>
+<div class="grid">
+    <div class="col">
+        <p-table [value]="[]">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Vin</th>
+                    <th>Year</th>
+                    <th>Brand</th>
+                    <th>Color</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-car>
+                <tr>
+                    <td>{{car.vin}}</td>
+                    <td>{{car.year}}</td>
+                    <td>{{car.brand}}</td>
+                    <td>{{car.color}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
     </div>
 </div>
