--- a/src/app/sales/pages/sort/sort.component.html
+++ b/src/app/sales/pages/sort/sort.component.html
@@ -46,21 +46,19 @@
 </div>
 <div class="grid">
     <div class="col">
-        <p-table [value]="[]">
+        <p-table [value]="heroes">
             <ng-template pTemplate="header">
                 <tr>
-                    <th>Vin</th>
-                    <th>Year</th>
-                    <th>Brand</th>
+                    <th>Name</th>
+                    <th>Flight</th>
                     <th>Color</th>
                 </tr>
             </ng-template>
-            <ng-template pTemplate="body" let-car>
+            <ng-template pTemplate="body" let-hero>
                 <tr>
-                    <td>{{car.vin}}</td>
-                    <td>{{car.year}}</td>
-                    <td>{{car.brand}}</td>
-                    <td>{{car.color}}</td>
+                    <td>{{hero.name}}</td>
+                    <td>{{hero.flight}}</td>
+                    <td>{{hero.color}}</td>
                 </tr>
             </ng-template>
         </p-table>
