--- a/src/app/sales/pages/sort/sort.component.html
+++ b/src/app/sales/pages/sort/sort.component.html
@@ -46,7 +46,7 @@
 </div>
 <div class="grid">
     <div class="col">
-        <p-table [value]="heroes">
+        <p-table [value]="heroes | sort">
             <ng-template pTemplate="header">
                 <tr>
                     <th>Name</th>
